# gopro_ros

./: .gitignore  CMakeLists.txt  README.md  combine_videos.cpp  extract_imu.cpp  gopro_multiple_videos.cpp  gopro_to_asl.cpp  gopro_to_rosbag.cpp  main.cpp  package.xml  setup.py  test_image_stamps.cpp
gopro_extract/: CMakeLists.txt  extract_imu.cpp  extract_video.cpp
gopro_extract/include/: extract_imu.h  extract_video.h
gpmf-parser/: CMakeLists.txt  GPMF_mp4reader.c  GPMF_parser.c  GPMF_print.cpp  GPMF_utils.c
gpmf-parser/include/: GPMF_mp4reader.h
include/: GPMF_mp4reader.h  GPMF_parser.h  GPMF_utils.h  ImuExtractor.h  Utils.h  VideoExtractor.h  color_codes.h  extract_video.h  utils.h
launch/: gopro_multiple_videos.launch  gopro_stream.launch  gopro_to_asl.launch  gopro_to_rosbag.launch
scripts/: asl_to_bag.py  bag_to_asl.py  commands.txt  gopro_capture.py  gopro_stream.py  mono_calibration.launch  opencv_capture.py  opencv_capture_udp.py  orbtimestamp.py
src/: GPMF_mp4reader.c  ImuExtractor.cpp  VideoExtractor.cpp  extract_imu.cpp  utils.cpp
utils/: CMakeLists.txt  utils.cpp
utils/include/: utils.h
